[package]
name = "learntask"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20.1",  features = ["rustls-tls-webpki-roots"] }
serde_json = "1.0.140"
futures-util = "0.3.31"
futures = "0.3.31"
ed25519-dalek = "2.1.1"
rand = "0.8.5"